Add: User Story 3 from Tuesday Challenge

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -3,6 +3,10 @@
 
 <%= button_to "Create New User", register_path, method: :get %>
 
+<p>OR</p>
+
+<%= link_to 'Log In', login_path %>
+
 <% @users.each do |user| %>
 <%= link_to user.name, user_path(user) %>
 <% end %>
